--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:${{ env.DATE_TAG }}
-            ghcr.io/${{ github.repository }}:rtian
+            ghcr.io/${{ github.repository }}:rtian-1
