--- a/Dockerfile.global
+++ b/Dockerfile.global
@@ -1,36 +1,20 @@
-# ========= 第1阶段：构建 + 全局安装 puppeteer =========
-FROM node:20-alpine AS builder
-# 构建阶段才需要编译工具
-RUN apk add --no-cache python3 make g++
-# 全局安装 puppeteer（会自动下载 Chromium，但我们后面会删掉它）
-# npm 配置（加速 + 清理）
-RUN npm config set registry https://registry.npmmirror.com/ && \
-    npm cache clean --force
-RUN npm install -g puppeteer@latest --legacy-peer-deps --save-exact
-# 关键：自动找到 puppeteer 真实安装路径并复制
-RUN PUPPETEER_PATH=$(npm root -g)/puppeteer && \
-    echo "找到 puppeteer 路径: $PUPPETEER_PATH" && \
-    mkdir -p /puppeteer-global && \
-    cp -r "$PUPPETEER_PATH" /puppeteer-global/
-
-
-# ========= 第2阶段：运行时极致精简镜像 =========
 FROM node:20-alpine
-
+RUN apk add --no-cache python3 make g++
 # 只装运行时真正需要的包（没有 python3/make/g++）
 RUN apk add --no-cache \
     chromium  nss freetype harfbuzz ca-certificates ttf-freefont font-noto-cjk \
     openssh-client sshpass curl
 
+RUN npm config set registry https://registry.npmmirror.com/ && \
+    npm cache clean --force
+
 # Puppeteer 环境变量（强制使用系统 chromium）
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
-# 复制第1阶段找到的 puppeteer
-COPY --from=builder /puppeteer-global/puppeteer /usr/lib/node_modules/puppeteer
+RUN npm install -g puppeteer@latest --production --legacy-peer-deps --save-exact
 
-# 修复全局命令（超级关键！）
-RUN ln -sf /usr/lib/node_modules/puppeteer/node_modules/.bin/puppeteer /usr/bin/puppeteer
+RUN apk del make g++ python3
 
 # SSH + cron 目录
 RUN mkdir -p /root/.ssh /var/spool/cron/crontabs /var/log && chmod 700 /root/.ssh && \
